sample video link

--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ __pycache__/
 /STSEval/env7/
 /STSEval/media/routine_videos
 /STSEval/media/sponsors/2
+/STSEval/media/project-stslivegym-setup.mp4
