stripe test mode setup

--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,4 @@ __pycache__/
 /STSEval/media/routine_videos
 /STSEval/media/sponsors/2
 /STSEval/media/project-stslivegym-setup.mp4
+/STSEval/static
